# vrclipboard-ime-gui

./: .gitmodules  Cargo.toml  LICENSE  index.html  package-lock.json  package.json  prepare.sh  release.json  tailwind.config.js
src/: AboutComponent.tsx  App.css  App.tsx  DictionaryComponent.tsx  LogContext.tsx  SettingsComponent.tsx  TerminalComponent.tsx  ThemeContext.tsx  TitleBar.tsx  TsfSettingsModal.tsx  checkbox.rs  info.rs  main.rs  main.tsx  menuitem.rs  settings.rs  sidebar.rs
src-tauri/: 2.0.0-rc  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/AzooKeyDictionary/AzooKeyDictionary/Dictionary/: mm.binary
src-tauri/resources/AzooKeyDictionary/AzooKeyDictionary/Dictionary/cb/: 0.binary  1.binary  10.binary  1000.binary  1001.binary  1002.binary  1003.binary  1004.binary  1005.binary  1006.binary  1007.binary  1008.binary  1009.binary  1010.binary  1011.binary  1012.binary  1014.binary  1015.binary  1019.binary  1020.binary  1021.binary  1022.binary  1023.binary  1025.binary  1026.binary  1027.binary  1028.binary  1029.binary  1030.binary  1032.binary  1037.binary  1038.binary  104.binary  1040.binary  1041.binary  1042.binary  1044.binary  1045.binary  1046.binary  1047.binary  (+992 more)
src-tauri/resources/AzooKeyDictionary/AzooKeyDictionary/Dictionary/louds/: %0.loudstxt3  (0.loudstxt3  )0.loudstxt3  00.loudstxt3  1.louds  1.loudschars2  10.loudstxt3  2.louds  2.loudschars2  20.loudstxt3  3.louds  3.loudschars2  30.loudstxt3  4.louds  4.loudschars2  40.loudstxt3  5.louds  5.loudschars2  50.loudstxt3  6.louds  6.loudschars2  60.loudstxt3  7.louds  7.loudschars2  70.loudstxt3  8.loudschars2  80.loudstxt3  9.loudschars2  90.loudstxt3  [27]0.loudstxt3  [2A]0.loudstxt3  ^.loudschars2  ^0.loudstxt3  _.loudschars2  _0.loudstxt3  ¨0.loudstxt3  ´0.loudstxt3  ‐0.loudstxt3  ‘0.loudstxt3  ’0.loudstxt3  (+563 more)
src-tauri/resources/AzooKeyDictionary/AzooKeyDictionary/Dictionary/p/: p_1.csv  p_2.csv  p_3.csv  p_4.csv  p_5.csv  p_6.csv  p_7.csv  p_8.csv  p_9.csv  p_—.csv  p_−.csv  p_ア.csv  p_イ.csv  p_ウ.csv  p_エ.csv  p_オ.csv  p_カ.csv  p_ガ.csv  p_キ.csv  p_ギ.csv  p_ク.csv  p_グ.csv  p_ケ.csv  p_ゲ.csv  p_コ.csv  p_ゴ.csv  p_サ.csv  p_ザ.csv  p_シ.csv  p_ジ.csv  p_ス.csv  p_ズ.csv  p_セ.csv  p_ゼ.csv  p_ソ.csv  p_ゾ.csv  p_タ.csv  p_ダ.csv  p_チ.csv  p_ヂ.csv  (+1050 more)
src-tauri/resources/AzooKeyDictionary/AzooKeyDictionary/EmojiDictionary/: emoji_all_E13.1.txt  emoji_all_E14.0.txt  emoji_all_E15.0.txt  emoji_all_E15.1.txt  emoji_dict_E13.1.txt  emoji_dict_E14.0.txt  emoji_dict_E15.0.txt  emoji_dict_E15.1.txt  emoji_genre_E13.1.txt  emoji_genre_E14.0.txt  emoji_genre_E15.0.txt  emoji_genre_E15.1.txt
src-tauri/src/: com.rs  config.rs  dictionary.rs  felanguage.rs  handler.rs  lib.rs  main.rs  tauri_emit_subscriber.rs  tsf_availability.rs  tsf_conversion.rs  vr.rs
src-tauri/src/azookey/: azookey_conversion.rs  client.rs  direct.rs  mod.rs  processing.rs  server.rs
src-tauri/src/converter/: hiragana.rs  katakana.rs  roman_to_kanji.rs
src-tauri/src/tsf/: function_provider.rs  input_processor_profile_mgr.rs  mod.rs  search_candidate_provider.rs  thread_mgr.rs
(+2 files in other folders)
