[package]
name = "vrclipboard-ime-gui-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_router = "0.7"
lucide-leptos = "=1.0.0"
uuid = { version = "1.0", features = ["v4", "js"] }

[workspace]
members = ["src-tauri"]
