[package]
name = "vrclipboard-ime-gui"
version = "1.12.0"
description = "VRClipboard IME"
authors = ["mii"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
chrono-tz = "0.9.0"
anyhow = "1.0.86"
clipboard = "0.5.0"
clipboard-master = "3.1.3"
serde_derive = "1.0.203"
serde_yaml = "0.9.34"
calc = { version = "*", default-features = false }
platform-dirs = "0.3.0"
once_cell = "1.19.0"
rosc = "~0.10"
regex = "1"
tracing = "0.1"
tracing-appender = "0.2"
tauri-plugin-shell = "2.0.0-rc"
azookey-binding = { path = "../../rs-azookey-binding" }
tokio = { version = "1.44.2", features = ["full"] }
ipc-channel = "0.19.0"
zip = "2.6.1"
wana_kana = "4.0.0"
itertools = "0.14.0"

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter", "fmt", "json", "local-time", "time"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.56.0"
features = [
    "implement",
    "Win32_System_Com",
    "Win32_UI_Input_Ime",
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "Foundation_Numerics",
    "UI",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_Variant",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
]


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0-rc"

# windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winreg", "winnt"] }
windows-core = "0.56.0"
